--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -2,6 +2,6 @@
    <h2 class="blog-post-title"><%= link_to blog.title.upcase,blog %></h2>
     <p class="blog-post-meta">Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</p>
     <%= render partial: 'blogs/admin_actions', locals: { blog: blog } %>
-    <p><%= blog.body %></p>
+    <p><%= markdown blog.body %></p>
     <hr>
 </div>
