--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -212,3 +212,13 @@ select {
 body {
     font-family: 'Merriweather', serif; 
 }
+img[src*="#fullstack"] {
+    width: 35%;
+    max-width: 100%;
+    margin-top: 3rem;
+}
+img[src*="#buildstuff"] {
+    width: 55%;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
