--- a/app/views/blogs/_blog_breadcrumb.html.erb
+++ b/app/views/blogs/_blog_breadcrumb.html.erb
@@ -1,6 +1,6 @@
 <nav class="breadcrumb row">
     <div class='col'>
-    <%= link_to "Home", root_path, class: 'breadcrumb-item' %>
+    <%= link_to "Home", blogs_path, class: 'breadcrumb-item' %>
     <%= link_to @blog.topic.title, topic_path(@blog.topic), class: 'breadcrumb-item' %>
  
     <span class="breadcrumb-item active"><%= @blog.title %></span>
