--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -7,7 +7,7 @@
                 <h3 class="text-center"><b>Phone:</b> <%= number_to_phone('7242319721') %></h3>  
         </div>
            
-        <div class="LI-profile-badge linkedin-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="heathershockney"><a class="LI-simple-link" href='https://www.linkedin.com/in/heathershockney?trk=profile-badge'>Heather Shockney</a></div>   
+        <div class="LI-profile-badge linkedin-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="heathershockney"><a class="LI-simple-link" href='https://www.linkedin.com/in/heathershockney?trk=profile-badge' target="blank">Heather Shockney</a></div>   
         
     </div>
 </div>
