--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
     <main role="main" class="inner cover w-100 my-auto">
         <h1 class="cover-heading text-center font-color">Business Focused Developer & UX Mentor.</h1>
         <p class="lead text-center font-shadow">
-           <span class="element"></span>
+           <span class="element" id="typedJs"></span>
         </p>
         <p class="lead text-center">
            <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-info" %>
