--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,7 +3,7 @@
         <h1 class="text-center my-3">Would you like to work together?</h1>
         <hr>
         <div class="text-center contact-details">
-                <h3 class="text-center"><b>Email:</b> <a href="mailto:heather.shockney@minedminds.org?subject=PortfolioContact">Drop me a line</a></h3>
+                <h3 class="text-center"><b>Email:</b> <a href="mailto:heather.shockney@minedminds.org?subject=PortfolioContact" target="blank">Drop me a line</a></h3>
                 <h3 class="text-center"><b>Phone:</b> <%= number_to_phone('7242319721') %></h3>  
         </div>
            
