--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -28,7 +28,7 @@
             <div class="col-md-7 about-me-div p-5">
                 <h1 class="font-shadow-about font-color">About Me</h1>
                 <p class="font-shadow-about"><em>Partnered with clients at all phases of SDLC.</em> Worked with clients from the start of the sales cycle to product inception and creating personas and user stories through to supporting the delivered product post production.</p>
-                <p class="font-shadow-about"><em>Speaker at technical conferences</em> domestically and internationally, including UX Tools for Developers workshop at BuildStuff Lithuania, UX for the Full Stack Developer at FullStack NYC, and UX Tools for Developers at Abstractions II Pittsburgh, PA.</p>
+                <p class="font-shadow-about"><em>Speaker at technical conferences</em> domestically and internationally, including UX Tools for Developers workshop at BuildStuff Lithuania and UX for the Full Stack Developer at FullStack NYC.</p>
                 <p>
                     <button
                     class="btn btn-primary mt-3"
